# echo

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json
docs/public/: architecture.md  faq.md  overview.md  requirements.md  user-guide.md
docs/public/release-notes/: 0.0.1.md  0.0.2.md
licenses/: README.md
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_request_mode.sql  003_note_type.sql  004_recording_consumed_at.sql  005_recording_chat_message.sql
src-tauri/src/: ai.rs  asr.rs  audio_capture.rs  audio_volume.rs  cancellation.rs  db.rs  e2e_real.rs  error.rs  ffmpeg.rs  lib.rs  models.rs  prompts.rs  storage.rs  timeline.rs
src-tauri/src/chat/: agent.rs  exec.rs  intent.rs  mod.rs  prompt.rs  refine.rs  tools.rs
src-tauri/src/commands/: ai_endpoints.rs  audio.rs  chat.rs  mod.rs  notes.rs  processing.rs  recordings.rs  settings.rs  tags.rs
src-tauri/src/prompts/: minutes_one_line_summary.md  minutes_refine.md  minutes_system.md
src-tauri/src/repo/: ai_endpoints.rs  chat.rs  mod.rs  note_bodies.rs  notes.rs  recordings.rs  settings.rs  tags.rs  transcripts.rs
src-tauri/src/worker/: finalize.rs  generate.rs  mod.rs  transcribe.rs
src-ui/: index.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.tsx  index.css
src-ui/src/api/: audio.ts  chat.ts  endpoints.ts  notes.ts  processing.ts  recordings.ts  settings.ts  system.ts  tags.ts
src-ui/src/components/: AssistantMarkdown.tsx  ChatPanel.tsx  FileUploader.tsx  NoteTags.tsx  RecordingWidget.tsx  SetupGate.tsx  SourceSelector.tsx  Spinner.tsx  TranscriptViewerModal.tsx  VersionHistory.tsx  WaveBars.tsx
src-ui/src/i18n/: LangContext.tsx  dict.ts
src-ui/src/i18n/dicts/: chat.ts  common.ts  detail.ts  misc.ts  notes.ts  settings.ts  source.ts  tags.ts
src-ui/src/lib/: audioDevice.ts  datetime.ts  stage.ts
src-ui/src/pages/: NoteDetailPage.tsx  NotesPage.tsx  SettingsPage.tsx
